<resources>
    <string name="app_name">Multiplus</string>
    <string name="action_settings">Settings</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="log_in">Log In</string>
    <string name="logut_text">Log Out</string>
    <string name="title_activity_chat_box">Chat</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_change_photo">ChangePhoto</string>
    <string name="title_activity_password">Change Password</string>
    <string name="title_activity_userdata">User Data</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
</resources>
