<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.netformular.multiplusmobileapp.activity.PasswordActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_password">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currentPassword"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_current_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPassword"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:hint="@string/new_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:hint="@string/confirm_password"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordButton"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:textAlignment="center"
        android:text="@string/change_password"/>

</LinearLayout>
