<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.netformular.multiplusmobileapp.activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:layout_width="match_parent"
        android:text="Multiplus Investment"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address_hint"
        android:layout_marginBottom="10dp"
        android:id="@+id/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_marginBottom="10dp"
        android:id="@+id/password"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/loginButton"
        android:text="@string/log_in"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:layout_height="wrap_content" />

</LinearLayout>
